project(webrtc_engine)
cmake_minimum_required(VERSION 2.6)

option(WEBRTC_POSIX "" ON)
if (WEBRTC_POSIX)
  add_definitions(-DWEBRTC_POSIX)
endif ()
option(WEBRTC_LINUX "" ON)
if (WEBRTC_LINUX)
  add_definitions(-DWEBRTC_LINUX)
  add_definitions(-DLINUX)
endif ()
option(UNIT_TEST "" OFF)
if (UNIT_TEST)
  add_definitions(-DUNIT_TEST)
endif ()
option(SSL_USE_SCHANNEL " " OFF)
if (SSL_USE_SCHANNEL)
  add_definitions(-DSSL_USE_SCHANNEL)
endif ()
option(SSL_USE_OPENSSL " " ON)
if (SSL_USE_OPENSSL)
  add_definitions(-DSSL_USE_OPENSSL)
  add_definitions(-DHAVE_OPENSSL_SSL_H)
endif ()
option(SSL_USE_NSS " " OFF)
if (SSL_USE_NSS)
  add_definitions(-DSSL_USE_NSS)
endif ()


set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -std=c++11" CACHE STRING "" FORCE)

set(WEBRTC_OUT webrtc_engine)

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)

set(PATH_WEBRTC ./webrtc)
set(PATH_TALK ./talk)
set(PATH_JSON ./json)

add_subdirectory(${PATH_WEBRTC})
add_subdirectory(${PATH_TALK})
add_subdirectory(${PATH_JSON})

add_subdirectory(p2pvideo)
