cmake_minimum_required(VERSION 2.6)

add_subdirectory(./audio_coding)
add_subdirectory(./audio_conference_mixer)
add_subdirectory(./audio_device)
add_subdirectory(./audio_processing)
add_subdirectory(./bitrate_controller)
add_subdirectory(./desktop_capture)
add_subdirectory(./interface)
add_subdirectory(./media_file)
add_subdirectory(./pacing)
add_subdirectory(./remote_bitrate_estimator)
add_subdirectory(./rtp_rtcp)
add_subdirectory(./utility)
add_subdirectory(./video_capture)
add_subdirectory(./video_coding)
add_subdirectory(./video_processing)
add_subdirectory(./video_render)

